Hover, click, background and cards animation

--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
   </head>
   <body>
     <div class="wrapper">
+      <div class="_bg-animation"></div>
       <div class="content">
         <div class="card">
           <div class="card__container _container">
+            <div class="card__bg">
+              <div class="card__bg1"></div>
+              <div class="card__bg2"></div>
+            </div>
             <div class="card__body">
               <div class="card__header header">
-                <h1 class="header__title">Todo list</h1>
-                <a href="#" class="header__btn">ADD</a>
+                <div class="header__content">
+                  <h1 class="header__title">Todo list</h1>
+                  <a href="#" class="header__btn">ADD</a>
+                </div>
               </div>
-
               <ul class="card__list list">
                 <li class="list__item">
                   <div class="list__title">delectus aut autem</div>
@@ -29,7 +35,7 @@
                 <li class="list__item">
                   <div class="list__title">quo laboriosam deleniti aut qui</div>
                 </li>
-                <li class="list__item">
+                <li class="list__item checked">
                   <div class="list__title">
                     laboriosam mollitia et enim quasi adipisci quia provident
                     illum
